# pqc-kyber512-

./: CMakeLists.txt  LICENSE  README.md  dma_utils.c  dma_utils.h  kyber.c
alice/: CMakeLists.txt  aes.h  dma_utils.c  kyber.c  kyber.h  main.c  ntt.c
bob(client)/: CMakeLists.txt  kyber.h  lwipopts.h  main.c  math_utils.c  math_utils.h  ntt.h
sca_tests/: dfa.c  dmachanges.c  timingloops.c
sca_tests/tvla/: alicemain.c  bobmain.c
